feat: agregar actividad al panel administrativo
